@@ -5,6 +5,10 @@
       <pre>Line1
 Line2</pre>
     </div>
+    <div id="extra">
+      <pre>Line1
+Line2</pre>
+    </div>
     <pre>Line1
 Line2</pre>
   </body>
