@@ -1,4 +1,7 @@
 <div id="target">
     <div>Content</div>
 </div>
+<div id="extra">
+    <div>Content</div>
+</div>
 <pre>Line1&#13;&#10;Line2</pre>
